# medication_extractor

./: .flake8  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  setup.py
.dvc/: config
app/: manage.py
app/app/: asgi.py  settings.py  urls.py  wsgi.py
app/demo/: apps.py  forms.py  urls.py  views.py
app/demo/templates/demo/: base.html  demo.html  home.html
app/medication_extractor/: rxnorm_api.py  utils.py
docs/: conf.py  index.rst  medication_extractor.rst  modules.rst  system_design.md
medication_extractor/: extractor.py  rxnorm_api.py  utils.py
notebooks/: demo.ipynb  extractor.ipynb  rxnorm_api.ipynb
requirements/: requirements.dev.txt  requirements.txt
src/docs/: run-notebooks.py
